--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "^10.4.14",
-    "axios": "^1.3.5",
+    "axios": "^1.8.4",
     "leaflet": "^1.9.3",
+    "node-cache": "^5.1.2",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
