--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.8",
     "autoprefixer": "^10.4.14",
     "axios": "^1.8.4",
     "leaflet": "^1.9.3",
