progress on the map and getting results

--- a/.env
+++ b/.env
@@ -3,5 +3,6 @@ JWT_SECRET=cookiespotsecret
 NODE_ENV=development
 PORT=5001
 VITE_GOOGLE_PLACES_API_KEY=AIzaSyCKTkJh3mkYxHKtQCFKZraMv3NOPprxVsA
-YELP_API_KEY=your_yelp_api_key
-FACEBOOK_ACCESS_TOKEN=your_facebook_token
+GOOGLE_PLACES_API_KEY=AIzaSyCKTkJh3mkYxHKtQCFKZraMv3NOPprxVsA
+
+# Removed Yelp and Facebook API keys as they are no longer used
