--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cookie-spots-website",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.8",
     "autoprefixer": "^10.4.14",
