--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.8",
+    "@googlemaps/markerclusterer": "^2.5.3",
     "autoprefixer": "^10.4.14",
     "axios": "^1.8.4",
     "google-map-react": "^2.2.1",
