--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "backend",
+  "name": "cookie-spots-backend",
   "version": "1.0.0",
+  "description": "Backend for Cookie Spots",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "generate-article": "node scripts/generateArticle.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "mongoose": "^8.14.0"
+    "express": "^4.18.2",
+    "openai": "^4.0.0",
+    "node-cron": "^3.0.3",
+    "mongoose": "^7.0.0",
+    "dotenv": "^16.0.3"
   }
 }
