--- a/server/package.json
+++ b/server/package.json
@@ -9,25 +9,33 @@
     "test": "jest"
   },
   "dependencies": {
-    "axios": "^1.6.2",
+    "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^6.7.0",
-    "helmet": "^7.0.0",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.2.1",
+    "helmet": "^7.1.0",
     "hpp": "^0.2.3",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
     "node-cron": "^3.0.2",
     "openai": "^4.0.0",
-    "xss-clean": "^0.1.1"
+    "winston": "^3.11.0",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
-    "jest": "^29.5.0",
-    "nodemon": "^3.1.9",
-    "supertest": "^6.3.3"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.0",
+    "supertest": "^6.3.4"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
