--- a/netlify.toml
+++ b/netlify.toml
@@ -12,4 +12,6 @@
   status = 200
 
 [functions]
-  node_bundler = "esbuild" 
+  node_bundler = "esbuild"
+  external_node_modules = ["mongodb"]
+  included_files = ["netlify/functions/utils/**"] 
